replicate http://lizhijian.owlstown.net/

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
-title: Moritz-Maria von Igelfeld
+baseURL: "https://zhijianli9999.github.io"
+title: Zhijian Li
 theme: PaperMod
 
 enableInlineShortcodes: true
@@ -12,26 +12,15 @@ taxonomies:
 
 menu:
     main:
-        - name: Books
-          url: books/
-          weight: 5 
-        - name: Papers
-          url: papers/
+        - name: Research
+          url: research/
           weight: 2
-        - name: Courses
-          url: courses/
-          weight: 3
-        - name: Data
-          url: data/
-          weight: 4 
-        - name: Blog
-          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
-          weight: 6
-
+        - CV
+          url: li_cv_101424.pdf
+          weight: 2
 params:
-    description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
-    author: Moritz-Maria von Igelfeld
-    # googleAnalyticsID: "G-XXXXX"
+    description: "This website hosts Zhijian Li's research papers, books, course materials, data, curriculum vitae, and contact information."
+    author: Zhijian Li
     DateFormat: "January 2006"
     defaultTheme: light
     hideFooter: false
@@ -44,7 +33,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["books","courses","papers","data"]
+    MainSections: ["research", "cv", "misc"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
@@ -54,58 +43,36 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Professor Dr von Igelfeld
-          subtitle: "I am a Professor in the Institute of Romance Philology at the University of Regensburg, Germany. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
-          imageUrl: "picture.jpeg"
+          title: Zhijian Li
+          subtitle: "Hi! I'm a PhD student in Quantitative Marketing at Northwestern University's Kellogg School of Management. My research interest lies mainly in empirical industrial organization. Before this, I was a research assistant at UCLA Anderson School of Management. I was born in China, raised in Singapore, and got my Bachelor's in Mathematics-Economics and Master's in Economics at UCLA. I go by my last name, Li."
+          imageUrl: "official photo kellogg.jpg"
           imageWidth: 160
           imageHeight: 160
           buttons:
-            - name: Papers
-              url: papers/
-            - name: Data
-              url: data/
-            - name: Books
-              url: books/
-            - name: Courses
-              url: courses/
-            - name: Tags
-              url: tags/
-            - name: Archive
-              url: archive/
-            - name: Blog
-              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+            - name: Research
+              url: research/
+            - name: CV
+              url: li_cv_101424.pdf
 
     socialIcons:
         - name: CV
-          url: cv.pdf
+          url: li_cv_101424.pdf
         - name: Email
-          url: mailto:igelfeld@regensburg.edu
-        - name: Zoom
-          url: https://www.zoom.us/my/igelfeld
+          url: mailto:zhijian.li@kellogg.northwestern.edu
         - name: Location
           url: location/
-        - name: Office Hours
-          url: officehours/
-        - name: Google Scholar
-          url: https://scholar.google.com/citations?user=cL23w-4AAAAJ
         - name: GitHub
-          url: https://github.com/pmichaillat
-        - name: Substack
-          url: https://pmichaillat.substack.com
-        - name: YouTube
-          url: https://www.youtube.com/@pmichaillat
+          url: https://github.com/zhijianli9999
         - name: Twitter
-          url: https://x.com/pmichaillat
-        - name: Bluesky
-          url: https://bsky.app/profile/pmichaillat.bsky.social
-
+          url: https://x.com/zhijian__li
+        
     assets:
         disableScrollBarStyle: true
     cover:
         hiddenInList: false
         hiddenInSingle: true
     label:
-      text: "Moritz-Maria von Igelfeld"
+      text: "Zhijian Li"
       icon: favicon.ico
       iconHeight: 18
 
